ACW2-3749|3751: Slicing & Integrasi: Modul 6 - Halaman Karir Detail & pop up karir

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,3 +42,12 @@
 .tab-header-container::-webkit-scrollbar {
   display: none;
 }
+
+.career-content ul {
+  list-style-type: disc;
+  margin-left: 20px;
+}
+
+.career-content li {
+  margin-bottom: 8px;
+}
