ACW2-5427: Fix banneer image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,7 @@
 
 .company-section {
   .slick-dots li button:before {
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     height: 12px !important;
     width: 12px !important;
     border-radius: 12px !important;
